--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.14.0",
-    "express": "^4.13.3"
+    "express": "^4.13.3",
+    "hiredis": "^0.4.1",
+    "redis": "^1.0.0"
   },
   "devDependencies": {
     "mocha": "^2.3.2",
