--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.14.0",
+    "ejs": "^2.3.4",
     "express": "^4.13.3",
     "hiredis": "^0.4.1",
     "redis": "^1.0.0"
